[gd_scene load_steps=5 format=3 uid="uid://cgyuoe0u64pb"]

[ext_resource type="Script" path="res://mob.gd" id="1_gqadk"]
[ext_resource type="PackedScene" uid="uid://dul00yjxc0e8p" path="res://slime.tscn" id="2_2ghfk"]
[ext_resource type="Texture2D" uid="uid://ch4ghhmy5ceyf" path="res://assets/enemyplaceholder.jpg" id="2_fnh7a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wdjbx"]
size = Vector2(32, 32)

[node name="Mob" type="RigidBody2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 131
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_gqadk")
slime_scene = ExtResource("2_2ghfk")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_wdjbx")

[node name="Enemyplaceholder" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_fnh7a")

[node name="ShootingCooldown" type="Timer" parent="."]
autostart = true

[node name="SlimeStartMarker" type="Marker2D" parent="."]
position = Vector2(40, 0)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ShootingCooldown" to="." method="_on_shooting_cooldown_timeout"]
